# progettoPC

./: .travis.yml  README.md  a.out  circleCentroids.csv  circlePoints.csv  datasetCentroids.csv  initialCentroids.csv  initialCentroids1.csv  parallel.c  parallel100.c  parallel15.c  parallel2.c  parallel25.c  parallel3.c  parallel5.c  parallel50.c  parallel75.c  parallelWith2CirclePoints.c  parallelWith2CirclePoints_#15.c  parallelWith2CirclePoints_#2.c  parallelWith2CirclePoints_#3.c  parallelWith2CirclePoints_#5.c  parallelWithCirclePoints.c  parallelWithCirclePoints100.c  parallelWithCirclePoints15.c  parallelWithCirclePoints25.c  parallelWithCirclePoints3.c  parallelWithCirclePoints5.c  parallelWithCirclePoints50.c  parallelWithCirclePoints75.c  parallelWithCirclePoints_#10.c  parallelWithCirclePoints_#15.c  parallelWithCirclePoints_#2.c  parallelWithCirclePoints_#3.c  parallelWithCirclePoints_#5.c  parallelWithRectangularCentroids3.c  parallelWithRectangularPoints.c  parallelWithRectangularPoints100.c  parallelWithRectangularPoints15.c  parallelWithRectangularPoints25.c  (+20 more)
CLion/: CMakeLists.txt  parallel.c  sequential.c
primoProgettoPC/progetto/: CMakeLists.txt  parallel.c  sequential.c
